backport: re PR middle-end/52888 (Unable to inline function pointer call with inexact signature match)

2013-03-01  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2012-04-10  Richard Guenther  <rguenther@suse.de>
 
	PR middle-end/52888
	* gimple-low.c (gimple_check_call_args): Properly account for
	compatible aggregate types.

From-SVN: r196378